--- a/about/index.html
+++ b/about/index.html
@@ -33,8 +33,8 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="../about/index.html">About</a></li>
-          <li><a href="../projects/index.html">Projects</a></li>
+          <li><a class="active-page" href="../about/index.html">About</a></li>
+          <li><a href="../projects/2015/index.html">Projects</a></li>
           <li><a href="../education/android.html">Education</a></li>
           <li><a href="../contact/index.html">Contact</a></li>
         </ul>
@@ -130,17 +130,6 @@
             <div class="col-sm-4 col-xs-12 eboard-member">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
-                    <div class="img"><img src="../img/e-board/chris.jpg" alt="Chris Yip"></div>
-                    <div class="info">
-                        <h3>Chris Yip</h3>
-                        <p>Secretary</p>
-                    </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-sm-4 col-xs-12 eboard-member">
-                <div class="ih-item circle colored effect3 left_to_right">
-                    <a href="#">
                         <div class="img"><img src="../img/e-board/robin.jpeg" alt="Robin Liu"></div>
                         <div class="info">
                             <h3>Robin Liu</h3>
@@ -149,7 +138,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-sm-4 col-xs-12">
+            <div class="col-sm-4 col-xs-12 eboard-member">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
                         <div class="img"><img src="../img/e-board/chi.JPG" alt="Chi Zhang"></div>
@@ -174,7 +163,7 @@
             <div class="col-sm-4 col-xs-12 eboard-member">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
-                        <div class="img"><img src="../img/e-board/Leen.jpg" alt="Leen AlShenibr"></div>
+                        <div class="img"><img src="../img/e-board/leen.jpg" alt="Leen AlShenibr"></div>
                         <div class="info">
                             <h3>Leen AlShenibr</h3>
                             <p>Director of Education</p>
@@ -249,8 +238,8 @@
             <li><a href="#">Windows</a></li>
         </ul>
       <ul class="footer-lists">
-        <li>Resources</li>
-        <li><a href="/newsletter/">Newsletter</a></li>
+          <li><a href="../contact/index.html">Contact</a></li>
+          <li><a href="mailto:gai@bu.edu">gai@bu.edu</a></li>
       </ul>
       <ul class="footer-lists gray-social-ul">
         <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="../img/social/facebook-32.png"></a>
@@ -270,15 +259,12 @@
       <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="../img/social/youtube-32.png"></a>
       <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="../img/social/github-32.png"></a>
     </ul>
-    <hr>
-    <div class="container-fluid footer-container" style="padding-bottom:20px">
-       <div class="footer-corner">
-        <a href="/">home</a>  -  <a href="/sitemap/"/>sitemap</a><br>Global App Initiative, Boston University
+      <hr class="footer-hr">
+      <div class="container-fluid footer-container" style="padding-bottom:20px">
+          <div class="footer-corner">
+              &copy Global App Initiative, Boston University
+          </div>
       </div>
-      <div class="footer-corner">
-        <a href="http://www.bu.edu/policies/students/disclaimer/" target="_blank"><i style="float:right">Website Disclaimer</i></a>
-      </div>
-    </div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
