--- a/contact/index.html
+++ b/contact/index.html
@@ -28,7 +28,7 @@
                 <li><a href="../about/index.html">About</a></li>
                 <li><a href="../projects/2015/index.html">Projects</a></li>
                 <li><a href="../education/android.html">Education</a></li>
-                <li><a href="../contact/index.html">Contact</a></li>
+                <li><a class="active-page" href="../contact/index.html">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -45,7 +45,7 @@
                     <label class="contact-label">Email</label>
                     <input type="text" name="mailfrom" class="form-control contact-input">
                     <label class="contact-label">Message</label>
-                    <textarea class="form-control contact-input" name="text" rows="5"></textarea>
+                    <textarea class="form-control contact-input" name="message" rows="5"></textarea>
                     <input type="hidden" name="sendtoemail" value="contact@globalappinitiative.org">
                     <input type="hidden" name="redirect" value="http://globalappinitiative.org">
                     <button type="submit" value="Send" class="btn btn-default form-btn">Submit</button>
@@ -71,14 +71,14 @@
         </ul>
         <ul class="footer-lists">
             <li>Education</li>
-            <li><a href="/education/index.html">Android</a></li>
+            <li><a href="../education/android.html">Android</a></li>
             <li><a href="#">Design</a></li>
             <li><a href="#">iOS</a></li>
             <li><a href="#">Windows</a></li>
         </ul>
         <ul class="footer-lists">
-            <li>Resources</li>
-            <li><a href="/newsletter/">Newsletter</a></li>
+            <li><a href="../contact/index.html">Contact</a></li>
+            <li><a href="mailto:gai@bu.edu">gai@bu.edu</a></li>
         </ul>
         <ul class="footer-lists gray-social-ul">
             <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="../img/social/facebook-32.png"></a>
@@ -98,13 +98,10 @@
         <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="/img/social/youtube-32.png"></img></a>
         <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="/img/social/github-32.png"></img></a>
     </ul>
-    <hr>
+    <hr class="footer-hr">
     <div class="container-fluid footer-container" style="padding-bottom:20px">
         <div class="footer-corner">
-            <a href="/">home</a>  -  <a href="/sitemap/"/>sitemap</a><br>Global App Initiative, Boston University
-        </div>
-        <div class="footer-corner">
-            <a href="http://www.bu.edu/policies/students/disclaimer/" target="_blank"><i style="float:right">Website Disclaimer</i></a>
+            &copy Global App Initiative, Boston University
         </div>
     </div>
 </div>
