--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/"><img height="48px" src="img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
+            <a href="index.html"><img height="48px" src="img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="about/index.html">About</a></li>
                 <li><a href="projects/2015/index.html">Projects</a></li>
-                <li><a href="education/index.html">Education</a></li>
+                <li><a href="education/android.html">Education</a></li>
                 <li><a href="contact/index.html">Contact</a></li>
             </ul>
         </div>
@@ -208,26 +208,26 @@
     <!--<div style="clear:both"></div>-->
     <div class="container-fluid footer-container">
         <ul class="footer-lists">
-            <li>About</li>
+            <li><a href="about/index.html">About</a></li>
             <li><a href="https://medium.com/@GlobalAppsBU" target="_blank">Blog</a></li>
-            <li><a href="/press/">Sponsors</a></li>
+            <li><a href="sponsors/index.html">Sponsors</a></li>
         </ul>
         <ul class="footer-lists">
             <li>Projects</li>
-            <li><a href="/projects/2013/index.html">2013</a></li>
-            <li><a href="/projects/2014/index.html">2014</a></li>
-            <li><a href="/projects/2015/index.html">2015</a></li>
+            <li><a href="projects/2013/index.html">2013</a></li>
+            <li><a href="projects/2014/index.html">2014</a></li>
+            <li><a href="projects/2015/index.html">2015</a></li>
         </ul>
         <ul class="footer-lists">
             <li>Education</li>
-            <li><a href="/education/index.html">Android</a></li>
-            <li><a href="#">Design</a></li>
-            <li><a href="#">iOS</a></li>
-            <li><a href="#">Windows</a></li>
+            <li><a href="education/android.html">Android</a></li>
+            <li><a href="education/design.html">Design</a></li>
+            <li><a href="education/ios.html">iOS</a></li>
+            <li><a href="education/windows.html">Windows</a></li>
         </ul>
         <ul class="footer-lists">
-            <li><a</li>
-            <li><a href="/newsletter/">Newsletter</a></li>
+            <li><a href="contact/index.html">Contact</a></li>
+            <li><a href="mailto:gai@bu.edu">gai@bu.edu</a></li>
         </ul>
         <ul class="footer-lists gray-social-ul">
             <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="/img/social/facebook-32.png"></a>
@@ -247,13 +247,10 @@
         <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="/img/social/youtube-32.png"></img></a>
         <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="/img/social/github-32.png"></img></a>
     </ul>
-    <hr>
+    <hr class="footer-hr">
     <div class="container-fluid footer-container" style="padding-bottom:20px">
         <div class="footer-corner">
             &copy Global App Initiative, Boston University
-        </div>
-        <div class="footer-corner">
-            <a href="http://www.bu.edu/policies/students/disclaimer/" target="_blank"><i style="float:right">Website Disclaimer</i></a>
         </div>
     </div>
 </div>
