--- a/education/android.html
+++ b/education/android.html
@@ -27,13 +27,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/"><img height="48px" src="../img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
+      <a href="../index.html"><img height="48px" src="../img/GAI-logo-white-extra-small.png" class="logotopleft"></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="../about/index.html">About</a></li>
+          <li><a href="../about/index.html">About</a></li>
           <li><a href="../projects/2015/index.html">Projects</a></li>
-        <li><a href="../education/android.html">Education</a></li>
+          <li><a class="active-page" href="../education/android.html">Education</a></li>
           <li><a href="../contact/index.html">Contact</a></li>
       </ul>
     </div>
@@ -124,58 +124,53 @@
 
 <!-- Site footer -->
 <div class="footer">
-  <div class="container-fluid">
-    <ul class="footer-lists">
-      <li>About</li>
-      <li><a href="/team/">Team</a></li>
-      <li><a href="https://medium.com/@GlobalAppsBU">Blog</a></li>
-      <li><a href="/press/">Press</a></li>
-    </ul>
-    <ul class="footer-lists">
-      <li>Projects</li>
-      <li><a href="/projects/current/">Current</a></li>
-      <li><a href="/projects/past/">Past</a></li>
-      <li><a href="/projects/clients/">Clients</a></li>
-    </ul>
-    <ul class="footer-lists">
-      <li>Resources</li>
-      <li><a href="/job-board/">Job Board</a></li>
-      <li><a href="/education/tutorials/">Tutorials</a></li>
-      <li><a href="/newsletter/">Newsletter</a></li>
-    </ul>
-    <ul class="footer-lists">
-      <li>Get involved</li>
-      <li><a href="/contact/students/">Students</a></li>
-      <li><a href="/contact/non-profits/">Non-Profits</a></li>
-      <li><a href="/partners/">Partners</a></li>
-    </ul>
-    <ul class="footer-lists gray-social-ul">
-      <a href="https://www.facebook.com/GlobalAppInitiative"><img src="../img/social/facebook-32.png"></img></a>
-      <a href="https://twitter.com/GlobalAppsBU"><img src="../img/social/twitter-32.png"></img></a>
-      <a href="https://instagram.com/globalappinitiative/"><img src="../img/social/instagram-32.jpg"></img></a>
-      <br>
-      <a href="https://www.linkedin.com/company/global-app-initiative"><img src="../img/social/linkedin-32.png"></img></a>
-      <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="../img/social/youtube-32.png"></img></a>
-      <a href="https://github.com/GlobalAppInitiative"><img src="../img/social/github-32.png"></img></a>
-    </ul>
-  </div>
-  <ul class="mobile-social">
-    <a href="https://www.facebook.com/GlobalAppInitiative"><img src="../img/social/facebook-32.png"></img></a>
-    <a href="https://twitter.com/GlobalAppsBU"><img src="../img/social/twitter-32.png"></img></a>
-    <a href="https://instagram.com/globalappinitiative/"><img src="../img/social/instagram-32.jpg"></img></a>
-    <a href="https://www.linkedin.com/company/global-app-initiative"><img src="../img/social/linkedin-32.png"></img></a>
-    <a href="https://www.youtube.com/user/GlobalAppInitiative"><img src="../img/social/youtube-32.png"></img></a>
-    <a href="https://github.com/GlobalAppInitiative"><img src="../img/social/github-32.png"></img></a>
-  </ul>
-  <hr>
-  <div class="container-fluid" style="padding-bottom:20px">
-    <div class="footer-corner">
-      <a href="/">home</a>  -  <a href="/sitemap/"/>sitemap</a><br>Global App Initiative, Boston University
+    <div class="container-fluid footer-container">
+        <ul class="footer-lists">
+            <li>About</li>
+            <li><a href="https://medium.com/@GlobalAppsBU" target="_blank">Blog</a></li>
+            <li><a href="/press/">Sponsors</a></li>
+        </ul>
+        <ul class="footer-lists">
+            <li>Projects</li>
+            <li><a href="../projects/2013/index.html">2013</a></li>
+            <li><a href="../projects/2014/index.html">2014</a></li>
+            <li><a href="../projects/2015/index.html">2015</a></li>
+        </ul>
+        <ul class="footer-lists">
+            <li>Education</li>
+            <li><a href="/education/index.html">Android</a></li>
+            <li><a href="#">Design</a></li>
+            <li><a href="#">iOS</a></li>
+            <li><a href="#">Windows</a></li>
+        </ul>
+        <ul class="footer-lists">
+            <li><a href="../contact/index.html">Contact</a></li>
+            <li><a href="mailto:gai@bu.edu">gai@bu.edu</a></li>
+        </ul>
+        <ul class="footer-lists gray-social-ul">
+            <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="../img/social/facebook-32.png"></a>
+            <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="../img/social/twitter-32.png"></img></a>
+            <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="../img/social/instagram-32.jpg"></img></a>
+            <br>
+            <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="../img/social/linkedin-32.png"></img></a>
+            <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="../img/social/youtube-32.png"></img></a>
+            <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="../img/social/github-32.png"></img></a>
+        </ul>
     </div>
-    <div class="footer-corner">
-      <a href="http://www.bu.edu/policies/students/disclaimer/"><i style="float:right">Website Disclaimer</i></a>
+    <ul class="mobile-social">
+        <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="img/social/facebook-32.png"></img></a>
+        <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="/img/social/twitter-32.png"></img></a>
+        <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="/img/social/instagram-32.jpg"></img></a>
+        <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="/img/social/linkedin-32.png"></img></a>
+        <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="/img/social/youtube-32.png"></img></a>
+        <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="/img/social/github-32.png"></img></a>
+    </ul>
+    <hr class="footer-hr">
+    <div class="container-fluid footer-container" style="padding-bottom:20px">
+        <div class="footer-corner">
+            &copy Global App Initiative, Boston University
+        </div>
     </div>
-  </div>
 </div>
 </body>
 </html>
