--- a/about/index.html
+++ b/about/index.html
@@ -220,15 +220,15 @@
   <div class="footer">
     <div class="container-fluid footer-container">
       <ul class="footer-lists">
-        <li>About</li>
+          <li><a href="../about/index.html">About</a></li>
         <li><a href="https://medium.com/@GlobalAppsBU" target="_blank">Blog</a></li>
         <li><a href="/press/">Sponsors</a></li>
       </ul>
       <ul class="footer-lists">
         <li>Projects</li>
-        <li><a href="/projects/current/">2013</a></li>
-        <li><a href="/projects/past/">2014</a></li>
-        <li><a href="/projects/clients/">2015</a></li>
+        <li><a href="../projects/2013/index.html">2013</a></li>
+        <li><a href="../projects/2014/index.html">2014</a></li>
+        <li><a href="../projects/2015/index.html">2015</a></li>
       </ul>
         <ul class="footer-lists">
             <li>Education</li>
