contact page footer

--- a/contact/index.html
+++ b/contact/index.html
@@ -59,9 +59,9 @@
 <div class="footer">
     <div class="container-fluid footer-container">
         <ul class="footer-lists">
-            <li>About</li>
+            <li><a href="../about/index.html">About</a></li>
             <li><a href="https://medium.com/@GlobalAppsBU" target="_blank">Blog</a></li>
-            <li><a href="/press/">Sponsors</a></li>
+            <li><a href="../sponsors/index.html">Sponsors</a></li>
         </ul>
         <ul class="footer-lists">
             <li>Projects</li>
@@ -72,9 +72,9 @@
         <ul class="footer-lists">
             <li>Education</li>
             <li><a href="../education/android.html">Android</a></li>
-            <li><a href="#">Design</a></li>
-            <li><a href="#">iOS</a></li>
-            <li><a href="#">Windows</a></li>
+            <li><a href="../education/design.html">Design</a></li>
+            <li><a href="../education/ios.html">iOS</a></li>
+            <li><a href="../education/windows.html">Windows</a></li>
         </ul>
         <ul class="footer-lists">
             <li><a href="../contact/index.html">Contact</a></li>
