about page footer

--- a/about/index.html
+++ b/about/index.html
@@ -232,10 +232,10 @@
       </ul>
         <ul class="footer-lists">
             <li>Education</li>
-            <li><a href="/education/index.html">Android</a></li>
-            <li><a href="#">Design</a></li>
-            <li><a href="#">iOS</a></li>
-            <li><a href="#">Windows</a></li>
+            <li><a href="../education/android.html">Android</a></li>
+            <li><a href="../education/design.html">Design</a></li>
+            <li><a href="../education/ios.html">iOS</a></li>
+            <li><a href="../education/windows.html">Windows</a></li>
         </ul>
       <ul class="footer-lists">
           <li><a href="../contact/index.html">Contact</a></li>
