fixed footer and links

--- a/about/index.html
+++ b/about/index.html
@@ -163,7 +163,7 @@
             <div class="col-sm-4 col-xs-12 eboard-member">
                 <div class="ih-item circle colored effect3 left_to_right">
                     <a href="#">
-                        <div class="img"><img src="../img/e-board/leen.jpg" alt="Leen AlShenibr"></div>
+                        <div class="img"><img src="../img/e-board/Leen.jpg" alt="Leen AlShenibr"></div>
                         <div class="info">
                             <h3>Leen AlShenibr</h3>
                             <p>Director of Education</p>
@@ -222,7 +222,7 @@
       <ul class="footer-lists">
           <li><a href="../about/index.html">About</a></li>
           <li><a href="https://medium.com/@GlobalAppsBU" target="_blank">Blog</a></li>
-          <li><a href="/press/">Sponsors</a></li>
+          <li><a href="../sponsors/index.html">Sponsors</a></li>
       </ul>
       <ul class="footer-lists">
         <li>Projects</li>
