--- a/contact/index.html
+++ b/contact/index.html
@@ -82,21 +82,21 @@
         </ul>
         <ul class="footer-lists gray-social-ul">
             <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="../img/social/facebook-32.png"></a>
-            <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="../img/social/twitter-32.png"></img></a>
-            <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="../img/social/instagram-32.jpg"></img></a>
+            <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="../img/social/twitter-32.png"></a>
+            <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="../img/social/instagram-32.jpg"></a>
             <br>
-            <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="../img/social/linkedin-32.png"></img></a>
-            <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="../img/social/youtube-32.png"></img></a>
-            <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="../img/social/github-32.png"></img></a>
+            <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="../img/social/linkedin-32.png"></a>
+            <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="../img/social/youtube-32.png"></a>
+            <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="../img/social/github-32.png"></a>
         </ul>
     </div>
     <ul class="mobile-social">
-        <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="img/social/facebook-32.png"></img></a>
-        <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="/img/social/twitter-32.png"></img></a>
-        <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="/img/social/instagram-32.jpg"></img></a>
-        <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="/img/social/linkedin-32.png"></img></a>
-        <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="/img/social/youtube-32.png"></img></a>
-        <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="/img/social/github-32.png"></img></a>
+        <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="../img/social/facebook-32.png"></a>
+        <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="../img/social/twitter-32.png"></a>
+        <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="../img/social/instagram-32.jpg"></a>
+        <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="../img/social/linkedin-32.png"></a>
+        <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="../img/social/youtube-32.png"></a>
+        <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="../img/social/github-32.png"></a>
     </ul>
     <hr class="footer-hr">
     <div class="container-fluid footer-container" style="padding-bottom:20px">
