--- a/index.html
+++ b/index.html
@@ -163,28 +163,32 @@
         <div class="col-sm-4 home-contact">
             <p>Student or nonprofit?</p>
             <div class="col-sm-4 col-sm-offset-4 col-xs-offset-4">
-                <a href="contact/students/index.html" class="btn home-btn">Contact Us</a>
+                <a href="contact/index.html" class="btn home-btn">Contact Us</a>
             </div>
         </div>
         <div class="col-sm-4 home-subscribe">
-            <p>Keep up with the latest news and events</p>
-            <div class="col-sm-10 col-sm-offset-1 col-xs-offset-3">
-                <form class="subscribe-form">
-                    <div class="form-group">
-                        <div class="input-group">
-                            <input type="email" class="form-control" id="subscribe-input">
-                        <span class="input-group-btn">
-                            <button class="btn home-btn" id="subscribe-btn">Subscribe</button>
-                        </span>
-                        </div>
-                    </div>
-                </form>
+            <!--<p>Keep up with the latest news and events</p>-->
+            <!--<div class="col-sm-10 col-sm-offset-1 col-xs-offset-3">-->
+                <!--<form class="subscribe-form">-->
+                    <!--<div class="form-group">-->
+                        <!--<div class="input-group">-->
+                            <!--<input type="email" class="form-control" id="subscribe-input">-->
+                        <!--<span class="input-group-btn">-->
+                            <!--<button class="btn home-btn" id="subscribe-btn">Subscribe</button>-->
+                        <!--</span>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</form>-->
+            <!--</div>-->
+            <p>Learn how to make great mobile apps!</p>
+            <div class="col-sm-4 col-sm-offset-4 col-xs-offset-4">
+                <a href="education/android.html" class="btn home-btn">Video Tutorials</a>
             </div>
         </div>
         <div class="col-sm-4 home-projects">
             <p>Want to see our work?</p>
             <div class="col-sm-4 col-sm-offset-4 col-xs-offset-4">
-                <a href="#" class="btn home-btn">Projects</a>
+                <a href="projects/2015/index.html" class="btn home-btn">Projects</a>
             </div>
         </div>
     </div>
@@ -192,20 +196,6 @@
 
 <!-- Site footer -->
 <div class="footer">
-    <!--<div class="presub">-->
-    <!--<div class="subscribe-bar">-->
-    <!--<div>-->
-    <!--<form role="form">-->
-    <!--<label for="email">Keep up to date</label>-->
-    <!--<div class="form-group">-->
-    <!--<input type="email" class="form-control" id="email" placeholder="Enter your email">-->
-    <!--</div>-->
-    <!--<button type="submit" class="btn btn-default">Subscribe</button>-->
-    <!--</form>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div style="clear:both"></div>-->
     <div class="container-fluid footer-container">
         <ul class="footer-lists">
             <li><a href="about/index.html">About</a></li>
@@ -230,22 +220,22 @@
             <li><a href="mailto:gai@bu.edu">gai@bu.edu</a></li>
         </ul>
         <ul class="footer-lists gray-social-ul">
-            <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="/img/social/facebook-32.png"></a>
-            <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="/img/social/twitter-32.png"></img></a>
-            <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="/img/social/instagram-32.jpg"></img></a>
+            <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="img/social/facebook-32.png"></a>
+            <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="img/social/twitter-32.png"></a>
+            <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="img/social/instagram-32.jpg"></a>
             <br>
-            <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="/img/social/linkedin-32.png"></img></a>
-            <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="/img/social/youtube-32.png"></img></a>
-            <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="/img/social/github-32.png"></img></a>
+            <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="img/social/linkedin-32.png"></a>
+            <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="img/social/youtube-32.png"></a>
+            <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="img/social/github-32.png"></a>
         </ul>
     </div>
     <ul class="mobile-social">
-        <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="img/social/facebook-32.png"></img></a>
-        <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="/img/social/twitter-32.png"></img></a>
-        <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="/img/social/instagram-32.jpg"></img></a>
-        <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="/img/social/linkedin-32.png"></img></a>
-        <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="/img/social/youtube-32.png"></img></a>
-        <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="/img/social/github-32.png"></img></a>
+        <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="img/social/facebook-32.png"></a>
+        <a href="https://twitter.com/GlobalAppsBU" target="_blank"><img src="img/social/twitter-32.png"></a>
+        <a href="https://instagram.com/globalappinitiative/" target="_blank"><img src="img/social/instagram-32.jpg"></a>
+        <a href="https://www.linkedin.com/company/global-app-initiative" target="_blank"><img src="img/social/linkedin-32.png"></a>
+        <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="img/social/youtube-32.png"></a>
+        <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="img/social/github-32.png"></a>
     </ul>
     <hr class="footer-hr">
     <div class="container-fluid footer-container" style="padding-bottom:20px">
