--- a/education/ios.html
+++ b/education/ios.html
@@ -113,7 +113,7 @@
         <ul class="footer-lists">
             <li>About</li>
             <li><a href="https://medium.com/@GlobalAppsBU" target="_blank">Blog</a></li>
-            <li><a href="/press/">Sponsors</a></li>
+            <li><a href="../sponsors/index.html">Sponsors</a></li>
         </ul>
         <ul class="footer-lists">
             <li>Projects</li>
@@ -123,10 +123,10 @@
         </ul>
         <ul class="footer-lists">
             <li>Education</li>
-            <li><a href="/education/index.html">Android</a></li>
-            <li><a href="#">Design</a></li>
-            <li><a href="#">iOS</a></li>
-            <li><a href="#">Windows</a></li>
+            <li><a href="../education/android.html">Android</a></li>
+            <li><a href="../education/design.html">Design</a></li>
+            <li><a href="../education/ios.html">iOS</a></li>
+            <li><a href="../education/windows.html">Windows</a></li>
         </ul>
         <ul class="footer-lists">
             <li><a href="../contact/index.html">Contact</a></li>
