about page added video

--- a/about/index.html
+++ b/about/index.html
@@ -75,7 +75,7 @@
     <div class="video-background">
         <h3>See more of who we are</h3>
         <h4>
-            <i class="fa fa-play-circle fa-2x"></i>Play Video
+            <a href="https://www.youtube.com/watch?v=qO67YCJ6PQg" target="_blank"><i class="fa fa-play-circle fa-2x"></i>Play Video</a>
         </h4>
     </div>
     <div class="container-fluid about_body">
