sponsors page footer

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -57,26 +57,26 @@
 <div class="footer">
     <div class="container-fluid footer-container">
         <ul class="footer-lists">
-            <li>About</li>
+            <li><a href="../about/index.html">About</a></li>
             <li><a href="https://medium.com/@GlobalAppsBU" target="_blank">Blog</a></li>
-            <li><a href="/press/">Sponsors</a></li>
+            <li><a href="../sponsors/index.html">Sponsors</a></li>
         </ul>
         <ul class="footer-lists">
             <li>Projects</li>
-            <li><a href="/projects/current/">2013</a></li>
-            <li><a href="/projects/past/">2014</a></li>
-            <li><a href="/projects/clients/">2015</a></li>
+            <li><a href="../projects/2013/index.html">2013</a></li>
+            <li><a href="../projects/2014/index.html">2014</a></li>
+            <li><a href="../projects/2015/index.html">2015</a></li>
         </ul>
         <ul class="footer-lists">
             <li>Education</li>
-            <li><a href="/education/index.html">Android</a></li>
-            <li><a href="#">Design</a></li>
-            <li><a href="#">iOS</a></li>
-            <li><a href="#">Windows</a></li>
+            <li><a href="../education/android.html">Android</a></li>
+            <li><a href="../education/design.html">Design</a></li>
+            <li><a href="../education/ios.html">iOS</a></li>
+            <li><a href="../education/windows.html">Windows</a></li>
         </ul>
         <ul class="footer-lists">
-            <li>Resources</li>
-            <li><a href="/newsletter/">Newsletter</a></li>
+            <li><a href="../contact/index.html">Contact</a></li>
+            <li><a href="mailto:gai@bu.edu">gai@bu.edu</a></li>
         </ul>
         <ul class="footer-lists gray-social-ul">
             <a href="https://www.facebook.com/GlobalAppInitiative" target="_blank"><img src="../img/social/facebook-32.png"></a>
@@ -96,20 +96,12 @@
         <a href="https://www.youtube.com/user/GlobalAppInitiative" target="_blank"><img src="../img/social/youtube-32.png"></a>
         <a href="https://github.com/GlobalAppInitiative" target="_blank"><img src="../img/social/github-32.png"></a>
     </ul>
-    <hr>
+    <hr class="footer-hr">
     <div class="container-fluid footer-container" style="padding-bottom:20px">
         <div class="footer-corner">
-            <a href="/">home</a>  -  <a href="/sitemap/"/>sitemap</a><br>Global App Initiative, Boston University
-        </div>
-        <div class="footer-corner">
-            <a href="http://www.bu.edu/policies/students/disclaimer/" target="_blank"><i style="float:right">Website Disclaimer</i></a>
+            &copy Global App Initiative, Boston University
         </div>
     </div>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="../owl.carousel/owl-carousel/owl.carousel.min.js"></script>
-<script src="../js/jquery.countTo.js"></script>
-<script src="../js/about.js"></script>
 </body>
 </html>
