--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -11,10 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/global.css"/>
     <link rel="stylesheet" type="text/css" href="../font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/ihover.css"/>
-    <link rel="stylesheet" type="text/css" href="../owl.carousel/owl-carousel/owl.carousel.css"/>
-    <link rel="stylesheet" type="text/css" href="../owl.carousel/owl-carousel/owl.theme.css"/>
-    <link rel="stylesheet" type="text/css" href="../css/about.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/sponsors.css">
 </head>
 <body>
 
@@ -45,11 +42,7 @@
 <!-- main body-->
 <div class="body-container">
     <div class="container">
-        <h2>This page is still under construction.</h2><br>
-        Sorry for the inconvenience! We recommend <a href="../index.html">going back to the home page</a>.
-    </div>
-    <div style="margin:0 auto">
-        <center><img src="../img/GAI_gif_blue_b.gif" style="opacity:0.2"></center>
+        <h1 id="sponsors-title">Sponsors</h1>
     </div>
 </div>
 
