--- a/leap/index.html
+++ b/leap/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="icon" href="../img/favicon.png" type="image/x-icon" />
 <html>
 <head lang="en">
     <meta charset="UTF-8">
@@ -50,9 +51,9 @@
                 skills, apply using the form below.
             </p>
         </div>
-        <div class="leap-schedule">
+        <div id="leap-schedule">
             <div class="day1 col-sm-4">
-                <h4 class="leap-schedule-header">Saturday, Oct. 10</h4>
+                <h4 class="leap-schedule-header">Friday, Nov. 6</h4>
                 <ul class="leap-schedule-list">
                     <li>11:00 AM: Check in/Registration</li>
                     <li>11:15 AM: Welcome</li>
@@ -64,13 +65,13 @@
                 </ul>
             </div>
             <div class="day2 col-sm-4">
-                <h4 class="leap-schedule-header">Sunday, Oct. 11</h4>
+                <h4 class="leap-schedule-header">Saturday, Nov. 7</h4>
                 <ul class="leap-schedule-list">
 
                 </ul>
             </div>
             <div class="day3 col-sm-4">
-                <h4 class="leap-schedule-header">Monday, Oct. 12</h4>
+                <h4 class="leap-schedule-header">Sunday, Nov. 8</h4>
                 <ul class="leap-schedule-list">
 
                 </ul>
