--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -43,6 +43,36 @@
 <div class="body-container">
     <div class="container">
         <h1 id="sponsors-title">Sponsors</h1>
+        <div class="row">
+            <div class="col-sm-6 col-md-offset-1 col-md-6">
+                <a href="#"><img src="../img/sponsors/kern-family-foundation.png"></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-md-6">
+                <a href="#"><img src="../img/sponsors/bu-cs.png"></a>
+            </div>
+            <div class="col-sm-6 col-md-6">
+                <a href="#"><img src="../img/sponsors/bu-eng.jpg"></a>
+            </div>
+            <div class="col-sm-6 col-md-6">
+                <a href="#"><img src="../img/sponsors/bu-epic.png"></a>
+            </div>
+            <div class="col-sm-6 col-md-6">
+                <a href="#"><img src="../img/sponsors/bu-fee.png"></a>
+            </div>
+            <div class="col-sm-6 col-md-6">
+                <a href="#"><img src="../img/sponsors/devxapp.jpg"></a>
+            </div>
+            <div class="col-sm-6 col-md-6">
+                <a href="#"><img src="../img/sponsors/terrapin.png"></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-md-offset-3 col-md-6">
+                <a href="#"><img src="../img/sponsors/bu-hariri.png"></a>
+            </div>
+        </div>
     </div>
 </div>
 
